static/css/abundantlysocial.css
/* ... */
.link-2 {
  color: #fff;
  text-decoration: none;
}

.welcome-backdrop {
  position: absolute;
  left: 0px;
  top: 0px;
  right: 0px;
  bottom: 0px;
  z-index: 0;
  display: block;
  height: 250px;
  max-width: 500px;
  margin: 15% auto;
  padding: 50px 20px;
  background-image: -webkit-linear-gradient(270deg, hsla(0, 0%, 100%, .5), hsla(0, 0%, 100%, .5));
  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, .5), hsla(0, 0%, 100%, .5));
  opacity: 0;
  text-align: center;
}

.text-block-18 {
  display: none;
}

.container-div {
  display: block;
  max-width: 1200px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 30px;
  padding-left: 30px;
}

.container-div.blog-header {
  position: relative;
  z-index: 1;
  max-width: 900px;
}

.container-div.blog-content {
  max-width: 900px;
}

.container-div.video-content {
  position: relative;
  top: -500px;
  max-width: 900px;
  margin-bottom: -500px;
}

.container-div.hero-banner {
  width: 100%;
  max-width: 600px;
  text-align: center;
}

.container-div.footer {
  padding-top: 0px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 26px;
  text-align: center;
}

.column-21 {
  padding-left: 25px;
}

.column-22 {
  padding-right: 25px;
  text-align: justify;
}

.dropdown-list {
  background-color: #fff;
}

.dropdown-list.w--open {
  min-width: 100%;
  border: 1px solid #d4d4d4;
  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .15);
}

.page-section {
  position: relative;
  z-index: 1;
  display: block;
  margin-top: 150px;
  margin-bottom: 150px;
}

.page-section .content_row.w-row {
  margin-bottom: 0px
}

.page-section.full-screen {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 80vh;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.page-section.blog {
  padding-top: 50px;
}

.blog-hero-banner {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 450px;
  margin-top: 0px;
  padding-top: 100px;
  padding-bottom: 100px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  background-image: url('/uploads/5Sw5ZtG.png');
  background-position: 50% 50%;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  box-shadow: inset 0 0 14px 1px rgba(0, 0, 0, .7);
  color: #fff;
  text-align: center;
}

.blog-title {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 50px;
  line-height: 60px;
}

.blog-subheading {
  font-size: 20px;
}

.div-block-31 {
  position: absolute;
  left: 0px;
  top: 0px;
  right: 0px;
  bottom: 0px;
  background-image: -webkit-linear-gradient(270deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5));
  background-image: linear-gradient(180deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5));
}

.author-photo {
  display: block;
  width: 100px;
  height: 100px;
  margin-right: auto;
  margin-left: auto;
  border: 5px solid #fff;
  border-radius: 100px;
  background-position: 50% 50%;
  background-size: cover;
}

.div-block-33 {
  position: relative;
  left: 0px;
  top: 0px;
  right: 0px;
  display: block;
  width: 100%;
  max-width: 300px;
  min-height: 100px;
  margin-right: auto;
  margin-left: auto;
  padding: 20px;
  box-shadow: none;
  text-align: center;
}

.div-block-34 {
  position: absolute;
  left: 0px;
  top: -220px;
  right: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.author-name {
  margin-bottom: 0px;
  font-weight: 700;
}

.blog-date {
  font-size: 14px;
}

.blog-text-block {
  margin-top: 50px;
}

.blog-text-block h2 {
  margin-top: 50px;
  font-weight: 900;
}

.blog-text-block h3 {
  margin-top: 20px;
  color: #4f3990;
  font-size: 26px;
  line-height: 36px;
  font-weight: 700;
}

.blog-text-block p {
  font-size: 18px;
}

.blog-text-block h4 {
  color: #333;
}

.blog-text-block blockquote {
  padding-top: 20px;
  padding-bottom: 20px;
  border-left-color: rgba(55, 57, 104, .31);
  background-image: -webkit-linear-gradient(43deg, rgba(55, 57, 104, .05), hsla(0, 0%, 100%, 0) 76%);
  background-image: linear-gradient(47deg, rgba(55, 57, 104, .05), hsla(0, 0%, 100%, 0) 76%);
  font-size: 22px;
  line-height: 32px;
  font-style: normal;
  font-weight: 500;
}

.blog-text-block a {
  color: var(--primary);
  font-weight: 400;
  text-decoration: underline;
}

.breadcrumb-text {
  display: inline-block;
}

.breadcrump-link {
  opacity: 0.7;
  color: #fff;
  text-decoration: none;
}

.breadcrump-link:hover {
  opacity: 1;
}

.link-3 {
  opacity: 0.7;
  color: #fff;
  text-decoration: none;
}

.link-3:hover {
  opacity: 1;
}

.standard-row {
  margin-right: -10px;
  margin-left: -10px;
}
/* ... */

